# synthetic-conversation-generation

./: LICENSE  README.md  assistant_conversations.jsonl  fine_tuning_dataset.jsonl  predicted_chatbot_arena_winners.csv  predicted_chatbot_arena_winners_base.csv  predicted_chatbot_arena_winners_finetuned.csv  predicted_winners_base.csv  pyproject.toml  requirements.txt  training_dataset.jsonl  validation_dataset.jsonl
data/assistants/: assistant.yaml  fashion_advisor.yaml
data/chatbot_arena/: train_with_predicted_answers.csv
data/conversation_characters/: assistant_personas.yaml  assistant_personas_64.yaml  fashion_advisor_personas.yaml
data/conversations/: assistant_conversations_32.jsonl  assistant_conversations_64.jsonl  fashion_advisor_conversations.jsonl
data/endpoint/: anthropic_chat_completion.yaml  openai_chat_completion.yaml
examples/conversation_characters/: fashion_advisor.yaml
examples/data-generation/: mental_health_companion.yaml
examples/endpoint/: anthropic_chat_completion.yaml  openai_chat_completion.yaml
src/: generate_data.py  generate_personas.py
src/data_models/: assistant.py  character_card.py  conversation.py  conversation_characters.py  data_generation_config.py  inference_endpoint.py  user_persona.py
src/llm_queries/: llm_query.py  user_message_generator.py  user_message_query.py  user_persona_generator.py  user_persona_query.py
src/synthetic_conversation_generation/: conversation_generator.py  create_fine_tuning_dataset.py  create_fine_tuning_job.py  create_grader.py  persona_generator.py  predict_chatbot_arena_winners.py
(+11 files in other folders)
